fix: fixed spacing between job title and company on jobcard

--- a/githired/src/components/JobCard.css
+++ b/githired/src/components/JobCard.css
@@ -37,6 +37,7 @@
 }
 .single-card h3 {
     padding-left:10%;
+    margin-top:3%;
 }
 .single-card p{
     padding-left:7%;
